# ReproductionNbSim

./: .clang-format  CMakeLists.txt  Readme.md
data/data_simulation_runs/: 1.txt  data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data16.txt  data21.txt  data9.txt
data/initial_populations/: initial_dead.txt  initial_icu.txt  initial_infected.txt  total_populations.txt
data/results/regional_fitting/region1/: weighting.txt
data/results/regional_fitting/region1/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region10/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region11/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region12/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region13/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region14/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region15/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region16/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region17/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region18/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region19/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region2/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region20/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region21/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region3/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region4/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region5/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region6/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region7/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region8/leastsq_fit/: best_values.txt  quality.txt
data/results/regional_fitting/region9/leastsq_fit/: best_values.txt  quality.txt
libs/ParamsLib/: CMakeLists.txt  params.cpp  params.h
libs/RungeKuttaLib/: CMakeLists.txt  RungeKutta.cpp  RungeKutta.h
libs/TimeSeriesLib/: CMakeLists.txt  TimeSeries.cpp  TimeSeries.h
src/cpp/: main.cpp
src/cpp/data_for_simulation/initial_populations/: initial_recovered.txt
src/python/: correlation.py  data1.txt  data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data1l.txt  data2.txt  data20.txt  data21.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  fitting.py  fitting4.py  plot_all.py  plot_german_rvals.py
src/python/regional fitting/: fitting2.py  fitting_one_region.py
src/python/regional_fitting/: averages.txt  averages1.txt  fitting2.py  fitting3.py
src/python/regional_fitting/region1/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region10/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region11/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region12/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region13/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region14/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region15/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region16/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region17/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region18/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region19/leastsq_fit/: best_values.txt  quality.txt
src/python/regional_fitting/region2/leastsq_fit/: best_values.txt  quality.txt
(+18 files in other folders)
